--- a/src/Pages/LoginReg.css
+++ b/src/Pages/LoginReg.css
@@ -183,3 +183,16 @@
     color: #171616;
     border-radius: 5px;
   }
+.loading-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white; /* Text color for the loading message */
+    font-size: 20px;
+  }
